--- a/kconfigs/qemu.conf
+++ b/kconfigs/qemu.conf
@@ -19,3 +19,6 @@ CONFIG_NET_9P=y
 CONFIG_NET_9P_VIRTIO=y
 CONFIG_9P_FS=y
 CONFIG_9P_FS_POSIX_ACL=y
+
+### Enable Xen block device backend
+CONFIG_XEN_BLKDEV_BACKEND=y
